load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "assets.go",
        "bindata.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core:go_default_library",
        "//core/coreunix:go_default_library",
        "//unixfs/io:go_default_library",
        "@com_github_ipfs_dir_index_html//:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["assets_test.go"],
    library = ":go_default_library",
)
