load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["blocks.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_multiformats_go_multihash//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["blocks_test.go"],
    library = ":go_default_library",
    deps = [
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_multiformats_go_multihash//:go_default_library",
    ],
)
