load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "argument.go",
        "channelmarshaler.go",
        "command.go",
        "option.go",
        "reqlog.go",
        "request.go",
        "response.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//commands/files:go_default_library",
        "//core:go_default_library",
        "//path:go_default_library",
        "//repo/config:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "command_test.go",
        "option_test.go",
        "response_test.go",
    ],
    library = ":go_default_library",
)
