load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bootstrap.go",
        "builder.go",
        "core.go",
        "pathresolver.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//blocks/blockstore:go_default_library",
        "//blockservice:go_default_library",
        "//exchange:go_default_library",
        "//exchange/bitswap:go_default_library",
        "//exchange/bitswap/network:go_default_library",
        "//exchange/offline:go_default_library",
        "//exchange/reprovide:go_default_library",
        "//filestore:go_default_library",
        "//fuse/mount:go_default_library",
        "//merkledag:go_default_library",
        "//mfs:go_default_library",
        "//namesys:go_default_library",
        "//namesys/republisher:go_default_library",
        "//p2p:go_default_library",
        "//path:go_default_library",
        "//pin:go_default_library",
        "//repo:go_default_library",
        "//repo/config:go_default_library",
        "//routing/none:go_default_library",
        "//routing/offline:go_default_library",
        "//thirdparty/math2:go_default_library",
        "//unixfs:go_default_library",
        "//unixfs/io:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//sync:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_ipfs_go_metrics_interface//:go_default_library",
        "@com_github_jbenet_go_base58//:go_default_library",
        "@com_github_jbenet_go_stream_muxer//:go_default_library",
        "@com_github_jbenet_goprocess//:go_default_library",
        "@com_github_jbenet_goprocess//context:go_default_library",
        "@com_github_jbenet_goprocess//periodic:go_default_library",
        "@com_github_libp2p_go_addr_util//:go_default_library",
        "@com_github_libp2p_go_floodsub//:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/discovery:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/host/basic:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/host/routed:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/protocol/identify:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/protocol/ping:go_default_library",
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_libp2p_go_libp2p_host//:go_default_library",
        "@com_github_libp2p_go_libp2p_interface_pnet//:go_default_library",
        "@com_github_libp2p_go_libp2p_kad_dht//:go_default_library",
        "@com_github_libp2p_go_libp2p_loggables//:go_default_library",
        "@com_github_libp2p_go_libp2p_metrics//:go_default_library",
        "@com_github_libp2p_go_libp2p_net//:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//:go_default_library",
        "@com_github_libp2p_go_libp2p_pnet//:go_default_library",
        "@com_github_libp2p_go_libp2p_routing//:go_default_library",
        "@com_github_libp2p_go_libp2p_swarm//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_whyrusleeping_go_smux_multiplex//:go_default_library",
        "@com_github_whyrusleeping_go_smux_multistream//:go_default_library",
        "@com_github_whyrusleeping_go_smux_yamux//:go_default_library",
        "@com_github_whyrusleeping_multiaddr_filter//:go_default_library",
        "@com_github_whyrusleeping_retry_datastore//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bootstrap_test.go",
        "core_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//repo:go_default_library",
        "//repo/config:go_default_library",
        "//thirdparty/testutil:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["pathresolver_test.go"],
    deps = [
        ":go_default_library",
        "//core/mock:go_default_library",
        "//path:go_default_library",
    ],
)
