load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["importer.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//commands/files:go_default_library",
        "//importer/balanced:go_default_library",
        "//importer/chunk:go_default_library",
        "//importer/helpers:go_default_library",
        "//importer/trickle:go_default_library",
        "//merkledag:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["importer_test.go"],
    library = ":go_default_library",
    deps = [
        "//importer/chunk:go_default_library",
        "//merkledag:go_default_library",
        "//merkledag/test:go_default_library",
        "//unixfs/io:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
    ],
)
