load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "keystore.go",
        "memkeystore.go",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_github_libp2p_go_libp2p_crypto//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "keystore_test.go",
        "memkeystore_test.go",
    ],
    library = ":go_default_library",
    deps = ["@com_github_libp2p_go_libp2p_crypto//:go_default_library"],
)
