load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dir.go",
        "fd.go",
        "file.go",
        "ops.go",
        "system.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//importer/chunk:go_default_library",
        "//merkledag:go_default_library",
        "//path:go_default_library",
        "//unixfs:go_default_library",
        "//unixfs/io:go_default_library",
        "//unixfs/mod:go_default_library",
        "//unixfs/pb:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "mfs_test.go",
        "repub_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//blocks/blockstore:go_default_library",
        "//blockservice:go_default_library",
        "//exchange/offline:go_default_library",
        "//importer:go_default_library",
        "//importer/chunk:go_default_library",
        "//merkledag:go_default_library",
        "//path:go_default_library",
        "//thirdparty/testutil/ci:go_default_library",
        "//unixfs:go_default_library",
        "//unixfs/io:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//sync:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
    ],
)
