load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "pin.go",
        "set.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//merkledag:go_default_library",
        "//merkledag/utils:go_default_library",
        "//pin/internal/pb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "pin_test.go",
        "set_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//blocks/blockstore:go_default_library",
        "//blockservice:go_default_library",
        "//exchange/offline:go_default_library",
        "//merkledag:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//query:go_default_library",
        "@com_github_ipfs_go_datastore//sync:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
    ],
)
