load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["format.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//importer:go_default_library",
        "//importer/chunk:go_default_library",
        "//merkledag:go_default_library",
        "//merkledag/utils:go_default_library",
        "//path:go_default_library",
        "//unixfs/io:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
    ],
)
