load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["format.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//merkledag:go_default_library",
        "//unixfs/pb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["format_test.go"],
    library = ":go_default_library",
    deps = [
        "//unixfs/pb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)
