load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "arc_cache.go",
        "blockstore.go",
        "bloom_cache.go",
        "caching.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//blocks:go_default_library",
        "//thirdparty/ds-help:go_default_library",
        "@com_github_gxed_bbloom//:go_default_library",
        "@com_github_hashicorp_golang_lru//:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//namespace:go_default_library",
        "@com_github_ipfs_go_datastore//query:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_ipfs_go_metrics_interface//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "arc_cache_test.go",
        "blockstore_test.go",
        "bloom_cache_test.go",
        "caching_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//blocks:go_default_library",
        "//thirdparty/ds-help:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//query:go_default_library",
        "@com_github_ipfs_go_datastore//sync:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
    ],
)
