load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["block_generator.go"],
    visibility = ["//visibility:public"],
    deps = ["//blocks:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["block_generator_test.go"],
    library = ":go_default_library",
)
