load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["filter.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//Godeps/_workspace/src/github.com/mtchavez/jenkins:go_default_library",
        "@com_github_steakknife_hamming//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["filter_test.go"],
    library = ":go_default_library",
)
