load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["set.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//blocks/bloom:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["set_test.go"],
    library = ":go_default_library",
    deps = [
        "//blocks/blocksutil:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
    ],
)
