load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mock.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//blockservice:go_default_library",
        "//exchange/bitswap:go_default_library",
        "//exchange/bitswap/testnet:go_default_library",
        "//routing/mock:go_default_library",
        "//thirdparty/delay:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["blocks_test.go"],
    library = ":go_default_library",
    deps = [
        "//blocks:go_default_library",
        "//blocks/blockstore:go_default_library",
        "//blockservice:go_default_library",
        "//exchange/offline:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//sync:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
    ],
)
