load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "seccat.go",
        "util.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//:go_default_library",
        "@com_github_libp2p_go_libp2p_secio//:go_default_library",
    ],
)

go_binary(
    name = "seccat",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
