load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cmd_suggestion.go",
        "helptext.go",
        "parse.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//Godeps/_workspace/src/github.com/texttheater/golang-levenshtein/levenshtein:go_default_library",
        "//commands:go_default_library",
        "//commands/files:go_default_library",
        "@com_github_Kubuxu_go_os_helper//:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "helptext_test.go",
        "parse_test.go",
    ],
    library = ":go_default_library",
    deps = ["//commands:go_default_library"],
)
