load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "file.go",
        "is_hidden.go",
        "linkfile.go",
        "multipartfile.go",
        "readerfile.go",
        "serialfile.go",
        "slicefile.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "is_hidden_windows.go",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["file_test.go"],
    library = ":go_default_library",
)
