load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "active.go",
        "add.go",
        "bitswap.go",
        "block.go",
        "bootstrap.go",
        "cat.go",
        "commands.go",
        "config.go",
        "dht.go",
        "diag.go",
        "dns.go",
        "external.go",
        "filestore.go",
        "get.go",
        "id.go",
        "ipns.go",
        "keystore.go",
        "log.go",
        "ls.go",
        "name.go",
        "p2p.go",
        "pin.go",
        "ping.go",
        "publish.go",
        "pubsub.go",
        "refs.go",
        "repo.go",
        "resolve.go",
        "root.go",
        "shutdown.go",
        "stat.go",
        "swarm.go",
        "sysdiag.go",
        "tar.go",
        "tour.go",
        "version.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "mount_unix.go",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "mount_unix.go",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "mount_windows.go",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//blocks:go_default_library",
        "//blocks/blockstore:go_default_library",
        "//blocks/blockstore/util:go_default_library",
        "//blockservice:go_default_library",
        "//commands:go_default_library",
        "//commands/files:go_default_library",
        "//core:go_default_library",
        "//core/commands/dag:go_default_library",
        "//core/commands/files:go_default_library",
        "//core/commands/object:go_default_library",
        "//core/commands/unixfs:go_default_library",
        "//core/corerepo:go_default_library",
        "//core/coreunix:go_default_library",
        "//exchange/bitswap:go_default_library",
        "//exchange/bitswap/decision:go_default_library",
        "//exchange/offline:go_default_library",
        "//filestore:go_default_library",
        "//keystore:go_default_library",
        "//merkledag:go_default_library",
        "//merkledag/test:go_default_library",
        "//mfs:go_default_library",
        "//namesys:go_default_library",
        "//path:go_default_library",
        "//pin:go_default_library",
        "//repo:go_default_library",
        "//repo/config:go_default_library",
        "//repo/fsrepo:go_default_library",
        "//repo/fsrepo/lock:go_default_library",
        "//routing/offline:go_default_library",
        "//tar:go_default_library",
        "//thirdparty/ipfsaddr:go_default_library",
        "//thirdparty/tar:go_default_library",
        "//tour:go_default_library",
        "//unixfs:go_default_library",
        "//unixfs/archive:go_default_library",
        "//unixfs/io:go_default_library",
        "//unixfs/pb:go_default_library",
        "@com_github_cheggaaa_pb//:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_ipfs_util//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_jbenet_go_base58//:go_default_library",
        "@com_github_libp2p_go_floodsub//:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/protocol/identify:go_default_library",
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_libp2p_go_libp2p_kad_dht//:go_default_library",
        "@com_github_libp2p_go_libp2p_kbucket//:go_default_library",
        "@com_github_libp2p_go_libp2p_metrics//:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//:go_default_library",
        "@com_github_libp2p_go_libp2p_protocol//:go_default_library",
        "@com_github_libp2p_go_libp2p_routing//:go_default_library",
        "@com_github_libp2p_go_libp2p_routing//notifications:go_default_library",
        "@com_github_libp2p_go_libp2p_swarm//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_net//:go_default_library",
        "@com_github_multiformats_go_multihash//:go_default_library",
        "@com_github_whyrusleeping_go_sysinfo//:go_default_library",
        "@com_github_whyrusleeping_multiaddr_filter//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "//fuse/node:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "//fuse/node:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "dht_test.go",
        "helptext_test.go",
        "tour_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//commands:go_default_library",
        "//namesys:go_default_library",
        "//thirdparty/testutil:go_default_library",
        "//tour:go_default_library",
    ],
)
