load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "corehttp.go",
        "gateway.go",
        "gateway_handler.go",
        "gateway_indexPage.go",
        "ipns_hostname.go",
        "logs.go",
        "metrics.go",
        "redirect.go",
        "webui.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//assets:go_default_library",
        "//commands:go_default_library",
        "//commands/http:go_default_library",
        "//core:go_default_library",
        "//core/commands:go_default_library",
        "//core/coreapi:go_default_library",
        "//core/coreapi/interface:go_default_library",
        "//importer:go_default_library",
        "//importer/chunk:go_default_library",
        "//merkledag:go_default_library",
        "//merkledag/utils:go_default_library",
        "//path:go_default_library",
        "//repo/config:go_default_library",
        "//unixfs:go_default_library",
        "//unixfs/io:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_gxed_client_golang//prometheus:go_default_library",
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_jbenet_go_is_domain//:go_default_library",
        "@com_github_jbenet_goprocess//:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/protocol/identify:go_default_library",
        "@com_github_libp2p_go_libp2p_routing//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_net//:go_default_library",
        "@com_github_multiformats_go_multibase//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "gateway_test.go",
        "metrics_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//core:go_default_library",
        "//core/coreunix:go_default_library",
        "//merkledag:go_default_library",
        "//namesys:go_default_library",
        "//path:go_default_library",
        "//repo:go_default_library",
        "//repo/config:go_default_library",
        "//thirdparty/testutil:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/host/basic:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/protocol/identify:go_default_library",
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_libp2p_go_libp2p_net//:go_default_library",
        "@com_github_libp2p_go_libp2p_netutil//:go_default_library",
    ],
)
